syntax = "proto3";
import "data.proto";
package app;
service WebService {
    //检查通道连接
    rpc getWebInfo(GetWebInfoRequest) returns (GetWebInfoResponse);
    rpc contactUs(ContactUsRequest) returns (EmptyResponse);
}

service NewsService{
    rpc getNews(GetNewsRequest) returns (GetNewsResponse);
    rpc editNewType(EditNewTypeRequest) returns (EmptyResponse);
    rpc editNew(EditNewRequest) returns (EditNewResponse);
    rpc editCover(EditNewCoverRequest) returns (EmptyResponse);
    rpc editContent(EditNewRequest) returns (EmptyResponse);
    rpc delNews(EditNewRequest) returns (EmptyResponse);
}

message  GetWebInfoRequest{
    repeated  int64 list=1;
}

message EditNewResponse{
    int64 id=1;
}

message  GetWebInfoResponse{
    map<int64,string> content=1;
}

message ContactUsRequest{
    string content=1;
    string phone=2;
    string email=3;
    string name=4;
    int64 id=5;
    int64 status=6;
}


message GetNewsRequest{
    int64 id=1;
    int64 page=2;
    int64 size=3;
    int64 status=4;
    int64 type=5;
}

message GetNewsResponse{
    repeated  NewsData list=1;
}

message NewsData{
    int64 id=1;
    string title=2;
    int64 time=3;
    string cover=4;
    string content=5;
    string source=6;
    int64 type=7;
}

message EditNewTypeRequest{
    int64 id=1;
    int64 type=2;
}

message EditNewRequest{
    int64 id=1;
    string title=2;
    string source=3;
    string content=4;
}

message EditNewCoverRequest{
    int64 id=1;
    string cover=2;
    string prefix=3;
}
